@startuml

       'skinparam monochrome true
       skinparam packageStyle rectangle
       skinparam shadowing false
       skinparam linetype polyline
       skinparam linetype orto

       skinparam classAttributeIconSize 0

       'left to right direction

       title US029 - Record the completion of a task.

       class CompleteTaskUI {
       }

       class CompleteTaskController {
           + completeTaskController(taskRepository, greenSpaceRepository)
           + List<GreenSpaceDTO> getGreenSpaces()
           + List<TaskDTO> getTasksByGreenSpace(greenSpaceDTO)
           + completeTask(taskDTO, newStatus)

       }

       class Repositories {
           - Repositories()
           + getInstance() : Repositories
           + getGreenSpaceRepository()
           + getTaskRepository()
       }

       class TaskRepository {
           + getTasksByGreenSpace(greenSpace)
           + toDTO(tasks)
           + completeTask(taskDTO, newStatus)
       }

       class GreenSpaceRepository {
           + List<GreenSpace> getGreenSpaces()
           + toDTO(greenSpaces)

       }

       class GreenSpaceMapper {
           + List<GreenSpaceDTO> toDTO(List<GreenSpace> greenSpaces)
           + GreenSpaceDTO toDTO(GreenSpace greenSpace)
       }

       class TaskMapper {
           + List<TaskDTO> toDTO(List<Task> tasks)
           + TaskDTO toDTO(Task task)
       }

       class GreenSpaceDTO {
           name
           area
           type
           address
       }

       class TaskDTO {
           title
           description
           degreeOfUrgency
           expectedDuration
           status
           startingDate
       }

       class Task {
           title
           description
           degreeOfUrgency
           expectedDuration
           status
           startingDate
       }

       class GreenSpace {
           name
           area
           type
           address
       }

       CompleteTaskUI ..> CompleteTaskController
       CompleteTaskController ...> Repositories: repositories
       CompleteTaskController ..> TaskRepository: taskRepository
       CompleteTaskController ..> GreenSpaceRepository: greenSpaceRepository

       Repositories -> Repositories : instance
       Repositories ---> "1" TaskRepository: taskRepository
       Repositories ---> "1" GreenSpaceRepository: greenSpaceRepository

       TaskRepository --> Task: tasks
       GreenSpaceRepository --> GreenSpace: green spaces

       TaskRepository ..> TaskMapper
       TaskMapper ..> TaskDTO
       TaskMapper ..> Task
       GreenSpaceRepository ..> GreenSpaceMapper
       GreenSpaceMapper ..> GreenSpaceDTO
       GreenSpaceMapper ..> GreenSpace

       @enduml